--- a/HealthLog/app/src/main/res/values/themes.xml
+++ b/HealthLog/app/src/main/res/values/themes.xml
@@ -5,5 +5,5 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.HealthLogh" parent="Base.Theme.HealthLogh" />
+    <style name="Theme.HealthLog" parent="Base.Theme.HealthLogh" />
 </resources>
