started to work on workout routines feature, EXPLORE section

--- a/HealthLog/app/src/main/res/layout/fragment_workout.xml
+++ b/HealthLog/app/src/main/res/layout/fragment_workout.xml
@@ -4,15 +4,38 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/centeredTextView"
-        android:layout_width="wrap_content"
+    <!-- Button for CUSTOM -->
+    <Button
+        android:id="@+id/btnCustom"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="WORKOUT"
-        android:textSize="80sp"
+        android:text="CUSTOM"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btnExplore"
+        app:layout_constraintBottom_toTopOf="@+id/content_frame"/>
+
+    <!-- Button for EXPLORE -->
+    <Button
+        android:id="@+id/btnExplore"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="EXPLORE"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/btnCustom"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/content_frame"/>
+
+    <!-- FrameLayout for Content -->
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnCustom"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent">
+        <!-- Content will be dynamically added here -->
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
